Fix for footer spacing on indexes.

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -165,6 +165,10 @@ footer {
   font-size: smaller;
 }
 
+section + footer {
+  padding-bottom: 4rem;
+}
+
 footer a, .tagline a, .tagline time {
   margin: 0 0.2rem;
 }
